--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "engines": {
     "node": "10.13.0"
-    
   },
   "keywords": [
     "jobs"
@@ -17,6 +16,7 @@
   "author": "ochoko chukwuebuka and jude ojini",
   "license": "ISC",
   "dependencies": {
+    "@google/maps": "^0.5.5",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.13.2",
@@ -27,8 +27,8 @@
     "http-errors": "^1.7.1",
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "nodemailer": "^4.6.8",
-    "nodemon": "^1.18.6",
     "random-number": "0.0.9"
   }
 }
