--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "start-watch": "nodemon server.js",
+    "dev": "concurrently \"yarn run start-watch\" \"cd client && yarn start\""
   },
   "engines": {
     "node": "10.13.0"
@@ -20,6 +22,7 @@
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.13.2",
+    "concurrently": "^4.1.0",
     "cookie-parser": "^1.4.3",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
