--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@google/maps": "^0.5.5",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "cloudinary": "^1.13.2",
     "concurrently": "^4.1.0",
     "cookie-parser": "^1.4.3",
