--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "reactstrap": "^6.5.0"
+    "reactstrap": "^6.5.0",
+    "validator": "^10.9.0"
   },
   "scripts": {
     "start": "react-scripts start",
