--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "http-errors": "^1.7.1",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.3.12",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
